@@ -1,6 +1,7 @@
 <tree string="AEAT 340 Investment Line">
     <field name="issue_date"/>
     <field name="party_name"/>
+    <field name="party_identifier_type"/>
     <field name="operation_key"/>
     <field name="base"/>
     <field name="tax"/>
